# Dashboard-And-ESP32

Web/: README.md
dashboard/: README.md  dashboard.json  package-lock.json  package.json
docs/: Diseño Proyecto sin nombre.excalidraw  Diseño Sistema v1.0.excalidraw  Diseño Sistema v2.0.excalidraw  Jerarquia topica v1.0.excalidraw  README.md
firmware/: README.md
firmware/esp32-circuit/: .gitignore  CMakeLists.txt
firmware/esp32-circuit/components/Base/: CMakeLists.txt
firmware/esp32-circuit/components/Base/include/: board_definition.h
firmware/esp32-circuit/components/Buttons/: CMakeLists.txt  buttons.c
firmware/esp32-circuit/components/Buttons/include/: buttons.h
firmware/esp32-circuit/components/Communications/: CMakeLists.txt  communications.c
firmware/esp32-circuit/components/Communications/include/: communications.h
firmware/esp32-circuit/components/DHT11/: CMakeLists.txt  DHT11.c
firmware/esp32-circuit/components/DHT11/include/: DHT11.h
firmware/esp32-circuit/components/Events/: CMakeLists.txt  events.c
firmware/esp32-circuit/components/Events/include/: events.h
firmware/esp32-circuit/components/Frozen/: CMakeLists.txt
firmware/esp32-circuit/components/GPIO/: CMakeLists.txt  gpio.c
firmware/esp32-circuit/components/GPIO/include/: gpio.h
firmware/esp32-circuit/components/Leds/: CMakeLists.txt  leds.c
firmware/esp32-circuit/components/Sensors/: CMakeLists.txt  sensors.c
firmware/esp32-circuit/components/Wifi/: CMakeLists.txt  wifi.c
firmware/esp32-circuit/main/: CMakeLists.txt  board_definition.h  main.c  main.h
(+3 files in other folders)
